--- a/src/styles/components/page.module.scss
+++ b/src/styles/components/page.module.scss
@@ -4,10 +4,8 @@
 $positionFromTop: 4rem;
 
 .page {
-  width: 100dvw;
-  width: 100vw;
-  min-height: 100dch;
-  min-height: 100vh;
+  width: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,5 +23,7 @@ $positionFromTop: 4rem;
   @media screen and (min-width: $sm-breakpoint) {
     padding: 0;
     gap: 4rem;
+    width: 100%;
+    max-width: 2440px;
   }
 }
