--- a/src/styles/pages/tracks.module.scss
+++ b/src/styles/pages/tracks.module.scss
@@ -3,6 +3,8 @@
 .tracksPage {
   height: 100%;
   display: flex;
+  width: 100%;
+  position: relative;
 }
 
 .tracks {
@@ -11,13 +13,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
   gap: 2rem;
   user-select: none;
-
-  @media screen and (min-width: $sm-breakpoint) {
-    justify-content: center;
-  }
 
   &__timeRange {
     display: flex;
