patching style tweaks and responsive behavior

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -252,7 +252,16 @@ $border-radius: 4px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: linear-gradient(135deg, rgba($black, 0.1), rgba($off-white, 1));
+  background: linear-gradient(
+    235deg,
+    rgba($off-white, 0.1),
+    rgba($gray-dark, 0.9)
+  );
+  box-shadow: 2px 2px 4px rgba($black, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 
   &:active {
     transform: scale($scale-active);
